--- a/src/styles/components/Home.scss
+++ b/src/styles/components/Home.scss
@@ -10,6 +10,6 @@ $sectionTitle: #72a0cc;
   // display: flex;
   // flex-direction: column;
   // align-items: flex-end;
-  // margin-top: 20%;
+  margin-top: 10%;
   // width: 70%;
 }
